kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata: {name: student-api, namespace: student-api}
spec:
  selector: {app: student-api}
  ports: [{name: http, port: 80, targetPort: http}]
  type: ClusterIP
